master: + questions slides

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <ul class="next">
       <li>Olya's routine 🫂</li>
       <li class="next">Paper 💩</li>
+      <li class="next">PDF is awesome</li>
       <li class="next">Company domain — the best proof</li>
       <li class="next">Modern & prestigious</li>
     </ul>
@@ -70,6 +71,14 @@
     <p class="next">
       <b>⚠️ Very flexible & powerful solution</b>
     </p>
+  </section>
+
+  <section class="slide slide--bsa" id="questions">
+    <h2>Questions ❓</h2>
+    <ul class="next">
+      <li>Where to store?</li>
+      <li class="next">Where to create?</li>
+    </ul>
   </section>
 
   <section class="slide slide--bsa" id="thanks">
